# cbio-ingest-cli

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
cbio_ingest/: __main__.py  api.py  cli.py  config.py  display.py
cbio_ingest/commands/: panel.py  study.py
tests/: conftest.py  test_api.py  test_config.py  test_panel.py  test_study.py
